--- a/golem.refactor/DESCRIPTION
+++ b/golem.refactor/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     scales,
     shiny (>= 1.8.1.1),
     stats,
-    tibble
+    tibble,
+    xgboost
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
